<?xml version="1.0" encoding="utf-8"?>
<resources>
    	
    <string name="app_name">OpenWeatherT</string>   
    <string name="action_settings">Setting</string>
    <string name="action_enter">Enter city</string>
    <string name="action_show_weather">Show weather</string>
    <string name="action_show_weather5">Show weather5</string>
    <string name="action_geo">Show weather gps</string>
	<string name="provider_gps">GPS</string>
	<string name="provider_network">Network</string>
	<string name="location_settings">Location settings</string>
	<string name="action_search">Search</string>
	
</resources>