<menu 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.openweathert.MainActivity" >
	<item 
	    android:id="@+id/action_search"
	    android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"             
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_settings"        
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="always">
     	<menu>        	                   
    		<item 
        		android:id="@+id/action_show_weather"        		        
        		android:title="@string/action_show_weather"
        		android:icon="@drawable/ic_action_directions"/>        
    		<item
        		android:id="@+id/action_show_weather5"        		
        		android:title="@string/action_show_weather5"
        		android:icon="@drawable/ic_action_download"/>
    		<item 
        		android:id="@+id/action_geo"        		
        		android:title="@string/action_geo"
        		android:icon="@drawable/ic_action_share"/>   
    	</menu>
  	</item>
  	             
</menu>